fix(components): adjust spacing for label, caption, and error in fields (DS-4108)

--- a/packages/components/src/components/FieldComponents/FieldCaption/FieldCaption.module.css
+++ b/packages/components/src/components/FieldComponents/FieldCaption/FieldCaption.module.css
@@ -5,7 +5,5 @@
 
   @mixin typography text-compact;
   color: var(--kbq-foreground-contrast-secondary);
-  margin: 0;
-  margin-block-start: var(--kbq-size-xxs);
   transition: color var(--kbq-transition-default);
 }
