--- a/packages/components/src/components/FieldComponents/FieldLabel/FieldLabel.module.css
+++ b/packages/components/src/components/FieldComponents/FieldLabel/FieldLabel.module.css
@@ -5,7 +5,7 @@
 
   @mixin typography text-normal;
   color: var(--kbq-foreground-contrast-secondary);
-  margin-block-end: var(--kbq-size-s);
+  margin-block-end: var(--kbq-size-xs);
 }
 
 .hidden {
